Bug 159874 - Inspection of 3D object in Development Tools crashes LibreOffice
Summary: Inspection of 3D object in Development Tools crashes LibreOffice
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0
Keywords: haveBacktrace
Depends on:
Blocks: Crash UNO-Object-Inspector
  Show dependency treegraph
 
Reported: 2024-02-24 21:28 UTC by Regina Henschel
Modified: 2024-07-18 08:12 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["rtl_uString_acquire"]


Attachments
gdb bt (10.15 KB, text/plain)
2024-02-24 22:07 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2024-02-24 21:28:41 UTC
Start Impress. Insert the 3D-object "Cone". From context menu use "Enter Group". Now the cone should be selected. The status bar should show "Rotation object selected".
 
Open the Development Tools and click on "Current Selection" and then on tab "Properties". The first entry should be " + @0 <Object@SvxShape> ...".
Open the +
Result: LibreOffice crashes.

I see the crash in Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: e19e193f88cd6c0525a17fb7a176ed8e6a3e2aa1
CPU threads: 32; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded

There might be a crash report 5094ce9b-0a25-4a6d-894d-414a9cd817b5 or 31f0c05d-7b6e-4f67-8e5a-808af280f50d. But following the link https://crashreport.libreoffice.org/stats/crash_details/31f0c05d-7b6e-4f67-8e5a-808af280f50d gives an error "The requested resource was not found on this server. "
Comment 1 Julien Nabet 2024-02-24 22:07:28 UTC
Created attachment 192752 [details]
gdb bt

On pc Debian x86-64 with master sources updated today, I had an assertion.
Comment 2 Julien Nabet 2024-02-24 22:53:53 UTC
It may be related to TextureKind/TextureKind2
First one contains only LUMINANCE and COLOR (see https://opengrok.libreoffice.org/xref/core/offapi/com/sun/star/drawing/TextureKind.idl?r=5687eba4)
the other one contains LUMINANCE, INTENSITY and COLOR (see 
LUMINANCE and COLOR)
Comment 3 Julien Nabet 2024-02-25 10:40:30 UTC
I've submitted a minimal patch here:
https://gerrit.libreoffice.org/c/core/+/163903

but here are what I put in the commit:
"
- there are TextureKind.idl and TextureKind2.idl but first one is indicated as deprecated since 2000!
(see 4f9e6d84feb36ab3072dafbab0ba4ae46d264f9b #80594# added a new TextureKind2 enum because of missing value in TextureKind)
=> should we only use TextureKind2.idl now?

- in svx/source/sdr/primitive3d/sdrattributecreator3d.cxx, we can read this comment:
// TextureKind: 1 == Base3DTextureLuminance, 2 == Base3DTextureIntensity, 3 == Base3DTextureColor
See https://opengrok.libreoffice.org/xref/core/svx/source/sdr/primitive3d/sdrattributecreator3d.cxx?r=05416682#88
but TextureKind2.idl defines LUMINANCE, INTENSITY and COLOR with no number,
so I expect they take by default values 0, 1 and 2
See https://opengrok.libreoffice.org/xref/core/offapi/com/sun/star/drawing/TextureKind2.idl?r=5687eba4

BTW, same pb with this line:
// TextureMode: 1 == Base3DTextureReplace, 2 == Base3DTextureModulate, 3 == Base3DTextureBlend
TextureMode.idl just indicates: REPLACE, MODULATE and BLEND

=> should we change comments and related code?
"
If someone has some thoughts here...
Comment 4 Commit Notification 2024-02-25 12:34:43 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ff197bf1a9a8a6cd73fe0e1cc03c4424d9e1dc2e

tdf#159874: Inspection of 3D object in Development Tools crashes LibreOffice

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Regina Henschel 2024-02-25 17:11:30 UTC
The patch fixes the crash for me.
Comment 6 Julien Nabet 2024-02-25 17:45:55 UTC
Thank you Regina for the feedback.

Let's put this one to FIXED and if someone has something in mind for the rest, we'll see.
Comment 7 Commit Notification 2024-02-26 20:55:42 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/87109270ce08a1f50bb1b791ff6c5a0abc8db891

Revert "tdf#159874: Inspection of 3D object in Development Tools crashes LibreOffice"

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-02-28 09:56:35 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/458f4c9b489d92947c4122e7c450f65f90aa4efe

tdf#159874: Inspection of 3D object in Dev Tools crashes LO (take 2)

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 stragu 2024-07-17 07:45:40 UTC
Reproduced in LO 7.4.0.3 with signature "rtl_uString_acquire": https://crashreport.libreoffice.org/stats/crash_details/f832ad9f-1085-4095-9bfd-d85db3d6c29b

Fixed in 24.8 RC1:

Version: 24.8.0.1 (X86_64) / LibreOffice Community
Build ID: 6fd6cae02baed1e82d14ed2da1f2458092354dab
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US

Julien, not sure if you setting the status from "resolved - fixed" back to "new" was an accident?
Comment 10 Julien Nabet 2024-07-17 08:22:10 UTC
(In reply to Stéphane Guillou (stragu) from comment #9)
> Reproduced in LO 7.4.0.3 with signature "rtl_uString_acquire":
> https://crashreport.libreoffice.org/stats/crash_details/f832ad9f-1085-4095-
> 9bfd-d85db3d6c29b
> 
> Fixed in 24.8 RC1:
> 
> Version: 24.8.0.1 (X86_64) / LibreOffice Community
> Build ID: 6fd6cae02baed1e82d14ed2da1f2458092354dab
> CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
> Locale: en-AU (en_AU.UTF-8); UI: en-US
> 
> Julien, not sure if you setting the status from "resolved - fixed" back to
> "new" was an accident?

It wasn’t an accident, I had to revert the patch because of a regression.
Perhaps someone else fixed this in another way.
Comment 11 stragu 2024-07-17 13:12:35 UTC
(In reply to Julien Nabet from comment #10)
> It wasn’t an accident, I had to revert the patch because of a regression.
> Perhaps someone else fixed this in another way.
And that someone else was... you with your comment 8 "take 2" patch! :)
I just checked in the linux-64-24.8 bibisect repo, 458f4c9b489d92947c4122e7c450f65f90aa4efe indeed fixed it.
Thanks, you can mark as fixed!
Comment 12 Julien Nabet 2024-07-18 08:12:53 UTC
(In reply to Stéphane Guillou (stragu) from comment #11)
> (In reply to Julien Nabet from comment #10)
> > It wasn’t an accident, I had to revert the patch because of a regression.
> > Perhaps someone else fixed this in another way.
> And that someone else was... you with your comment 8 "take 2" patch! :)
> I just checked in the linux-64-24.8 bibisect repo,
> 458f4c9b489d92947c4122e7c450f65f90aa4efe indeed fixed it.
> Thanks, you can mark as fixed!

Oups you’re right, let’s put this one to fixed then :-)